# Distributed-System-Control-Plane

./: .gitignore  CMakeLists.txt  README.md
examples/: example_service.cpp
include/: config_manager.h  control_plane.h  health_checker.h  http_server.h  load_balancer.h  monitoring.h  service_registry.h
src/: config_manager.cpp  control_plane.cpp  health_checker.cpp  http_server.cpp  load_balancer.cpp  main.cpp  monitoring.cpp  service_registry.cpp
